--- a/.local/share/applications/imv.desktop
+++ b/.local/share/applications/imv.desktop
@@ -3,7 +3,7 @@ Name=imv
 GenericName=Image viewer
 GenericName[en_US]=Image viewer
 Comment=Fast Image Viewer
-Exec=imv %F
+Exec=imv-dir %F
 NoDisplay=false
 Terminal=false
 Type=Application
